# filestorage

./: .gitignore  404.html  CMakeLists.txt  Gen_QR.cpp  Gen_QR.h  PKGBUILD  README.md  config_lib.lua  config_script.cpp  config_script.h  constants.hpp  database.cpp  database.h  deleter.html  error404.html  explorer.html  filestorageconf.lua  invalid_credentials.html  lua_config_libfunctions.cpp  lua_config_libfunctions.h  main.cpp  resources.hpp  server.cpp  server.h  sha256.cpp  sha256.hpp  templates.hpp  uploader.html
resources/: 404.html  config_lib.lua  deleter.html  error.html  error404.html  explorer.html  filestorageconf.lua  index.html  invalid_credentials.html  uploader.html
